<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_random_reaction">Add random reaction</string>
    <string name="username_sample">John Doe</string>
    <string name="username_sample_russian">Ivan Ivanov</string>
    <string name="long_message_text_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="short_message_text_sample">Quick brown fox jumped over the lazy dog.</string>
    <string name="set_avatar">Set avatar</string>
    <string name="set_name">Set name</string>
    <string name="timestamp_sample">01.01.1980 21:46</string>
    <string name="set_message_text">Set message text</string>
    <string name="message_edit_text_hint">Write message here…</string>
    <string name="send_message_button_description">Send message</string>
    <string name="sample_topic_name">Topic: #testing</string>
    <string name="unexpected_error">Unexpected error occurred</string>
    <string name="error_while_loading_emojis">Error when uploading emoji</string>
    <string name="not_supported">Function is not supported yet</string>
    <string name="reaction_already_exists">That reaction already exists</string>
    <string name="add_reaction_action">Add reaction</string>
    <string name="open_profile_action">Open profile</string>
    <string name="error_during_pagination">Error during pagination</string>
    <string name="pagination_error_retry_text">Couldn\'t load new messages\nClick here to try again</string>
    <string name="load_more_messages">Click here to load more</string>
    <string name="chat_beginning">Beginning of discussion</string>

</resources>