<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Base.Theme.VoiceApp.Chat"
    android:padding="@dimen/common_padding"
    android:orientation="horizontal">

    <ru.snowadv.chat.presentation.common.OutgoingMessageLayout
    android:id="@+id/outgoing_chat_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/incoming_chat_message"
    app:layout_constraintStart_toStartOf="parent"

    app:messageTextInOutgoingMessage="@string/short_message_text_sample"
    app:timestampTextInOutgoingMessage="@string/timestamp_sample"
    />
    <ru.snowadv.chat.presentation.common.IncomingMessageLayout
        android:id="@+id/incoming_chat_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/common_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:usernameTextInIncomingMessage="@string/username_sample"
        app:messageTextInIncomingMessage="@string/short_message_text_sample"
        app:timestampTextInIncomingMessage="@string/timestamp_sample"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_random_reaction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_random_reaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_name"
        app:layout_constraintBottom_toTopOf="@+id/add_random_reaction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_avatar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_avatar"
        app:layout_constraintBottom_toTopOf="@+id/set_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_message_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_message_text"
        app:layout_constraintBottom_toTopOf="@+id/set_avatar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>